[package]
authors.workspace = true
autobenches = false
description = "wgpu benchmarking suite"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "wgpu-benchmark"
publish = false
repository.workspace = true
version.workspace = true

[[bench]]
harness = false
name = "root"
path = "benches/root.rs"

[features]
# Uncomment these features to enable tracy and superluminal profiling.
# tracy = ["dep:tracy-client", "profiling/profile-with-tracy"]
# superluminal = ["profiling/profile-with-superluminal"]

[dependencies]
bincode.workspace = true
bytemuck.workspace = true
criterion.workspace = true
naga = { workspace = true, features = [
    "deserialize",
    "glsl-in",
    "glsl-out",
    "hlsl-out",
    "msl-out",
    "serialize",
    "spv-in",
    "spv-out",
    "wgsl-in",
    "wgsl-out",
] }
nanorand.workspace = true
once_cell.workspace = true
pollster.workspace = true
profiling.workspace = true
rayon.workspace = true
tracy-client = { workspace = true, optional = true }
wgpu = { workspace = true, features = ["dx12", "metal", "wgsl"] }
