[package]
name = "naga-cli"
version = "0.4.0"
authors = ["Naga Developers"]
edition = "2018"
description = "Shader translation command line tool"
homepage = "https://github.com/gfx-rs/naga"
repository = "https://github.com/gfx-rs/naga"
keywords = ["shader", "SPIR-V", "GLSL", "MSL"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "naga"
path = "src/main.rs"

[dependencies]
naga = { path = "../", features = ["validate", "span", "wgsl-in", "wgsl-out", "glsl-in", "glsl-out", "spv-in", "spv-out", "msl-out", "hlsl-out", "dot-out", "glsl-validate"] }
log = "0.4"
codespan-reporting = "0.11"
env_logger = "0.8"
argh = "0.1.5"
