[package]
name = "naga-cli"
version = "0.13.0"
authors = ["Naga Developers"]
edition = "2021"
description = "Shader translation command line tool"
homepage = "https://github.com/gfx-rs/naga"
repository = "https://github.com/gfx-rs/naga"
keywords = ["shader", "SPIR-V", "GLSL", "MSL"]
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1"
log = "0.4"
codespan-reporting = "0.11"
env_logger = "0.10"
argh = "0.1.5"

[dependencies.naga]
version = "0.13"
path = "../"
features = [
    "validate",
    "compact",
    "span",
    "wgsl-in",
    "wgsl-out",
    "glsl-in",
    "glsl-out",
    "spv-in",
    "spv-out",
    "msl-out",
    "hlsl-out",
    "dot-out",
    "serialize",
    "deserialize"
]
