[package]
name = "cts_runner"
version = "0.1.0"
authors = [
	"Luca Casonato <hello@lcas.dev>",
]
edition = "2021"
description = "CTS runner for wgpu"
license = "MIT OR Apache-2.0"
publish = false
resolver = "2"

[dependencies]
deno_console = "0.69.0"
deno_core = "0.151.0"
deno_url = "0.69.0"
deno_web = "0.100.0"
deno_webidl = "0.69.0"
deno_webgpu = { path = "../deno_webgpu" }
tokio = { version = "1.19.0", features = ["full"] }
termcolor = "1.1.2"
