[package]
name = "d3d12"
version = "0.19.0"
authors = ["gfx-rs developers"]
description = "Low level D3D12 API wrapper"
repository = "https://github.com/gfx-rs/wgpu/tree/trunk/d3d12"
keywords = ["windows", "graphics"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/d3d12"
categories = [
	"api-bindings",
	"graphics",
	"memory-management",
	"os::windows-apis",
]
edition = "2018"

[features]
implicit-link = []

[target.'cfg(windows)'.dependencies]
bitflags = "2"
# libloading 0.8 switches from `winapi` to `windows-sys`; permit either
libloading = { version = ">=0.7, <0.9", optional = true }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
	"dxgi1_2",
	"dxgi1_3",
	"dxgi1_4",
	"dxgi1_5",
	"dxgi1_6",
	"dxgidebug",
	"d3d12",
	"d3d12sdklayers",
	"d3dcommon",
	"d3dcompiler",
	"dxgiformat",
	"synchapi",
	"winerror",
]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
