# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_webgpu"
version = "0.63.0"
authors = ["the Deno authors"]
edition.workspace = true
license = "MIT"
readme = "README.md"
repository.workspace = true
description = "WebGPU implementation for Deno"

[dependencies]
deno_core.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
wgpu-core = { workspace = true, features = ["trace", "replay", "serde", "strict_asserts", "wgsl"] }
wgpu-types = { workspace = true, features = ["trace", "replay", "serde"] }
