# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.

[package]
authors = ["the Deno authors"]
description = "WebGPU implementation for Deno"
edition.workspace = true
license = "MIT"
name = "deno_webgpu"
readme = "README.md"
repository.workspace = true
version = "0.118.0"

[lib]
path = "lib.rs"

# We make all dependencies conditional on not being wasm,
# so the whole workspace can built as wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
deno_core.workspace = true
raw-window-handle = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
wgpu-types = { workspace = true, features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgpu-core]
features = [
    "gles",
    "raw-window-handle",
    "replay",
    "serde",
    "strict_asserts",
    "trace",
    "wgsl",
]
workspace = true

# We want the wgpu-core Metal backend on macOS and iOS.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.wgpu-core]
features = ["metal"]
workspace = true

# We want the wgpu-core Direct3D backend on Windows.
[target.'cfg(windows)'.dependencies.wgpu-core]
features = ["dx12"]
workspace = true

# We want the wgpu-core Vulkan backend on Unix (but not Emscripten) and Windows.
[target.'cfg(any(windows, all(unix, not(target_os = "emscripten"))))'.dependencies.wgpu-core]
features = ["vulkan"]
workspace = true
