[package]
authors.workspace = true
description = "Common example code"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "wgpu-examples"
publish = false
repository.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
# Cargo machete struggles with this dev dependency:
ignored = ["wasm_bindgen_test"]

[lib]
harness = false
path = "src/lib.rs"

[[bin]]
name = "wgpu-examples"
path = "src/main.rs"
test = false

[features]
default = []
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
cfg-if.workspace = true
encase = { workspace = true, features = ["glam"] }
flume.workspace = true
getrandom.workspace = true
glam.workspace = true
ktx2.workspace = true
log.workspace = true
nanorand.workspace = true
noise.workspace = true
obj.workspace = true
png.workspace = true
pollster.workspace = true
web-time.workspace = true
wgpu = { workspace = true, default-features = false, features = [
    "dx12",
    "metal",
    "wgsl",
] }
winit.workspace = true

[dev-dependencies]
wgpu-test.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
fern.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
# We need these features in the framework examples and tests
web-sys = { workspace = true, features = [
    "Blob",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "ImageData",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "WebGl2RenderingContext",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
