[package]
name = "gfx-examples"
version = "0.1.0"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"
publish = false

[[bin]]
name = "cube"
path = "src/cube.rs"

[[bin]]
name = "shadow"
path = "src/shadow.rs"

[features]
default = []
metal-auto-capture = ["wgpu/metal-auto-capture"]
metal = ["wgpu/metal"]
dx11 = ["wgpu/dx11"]
dx12 = ["wgpu/dx12"]
vulkan = ["wgpu/vulkan"]

[dependencies]
wgpu = { path = "../wgpu-rs" }
cgmath = "0.17"
env_logger = "0.5"
glsl-to-spirv = "0.1"
log = "0.4"
