[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "lock-analyzer"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
ron.workspace = true

[dependencies.serde]
features = ["serde_derive"]
workspace = true
