[package]
name = "naga-cli"
version = "0.20.0"
authors = ["gfx-rs developers"]
edition = "2021"
description = "Shader translation command line tool"
repository = "https://github.com/gfx-rs/wgpu/tree/trunk/naga-cli"
keywords = ["shader", "SPIR-V", "GLSL", "MSL"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "naga"
path = "src/bin/naga.rs"
# This _must_ be false, as this conflicts with `naga`'s docs.
#
# See https://github.com/gfx-rs/wgpu/issues/4997
doc = false
test = false

[dependencies]
bincode = "1"
codespan-reporting = "0.11"
env_logger = "0.11"
argh = "0.1.5"
anyhow.workspace = true

[dependencies.naga]
version = "0.20.0"
path = "../naga"
features = [
    "compact",
    "wgsl-in",
    "wgsl-out",
    "glsl-in",
    "glsl-out",
    "spv-in",
    "spv-out",
    "msl-out",
    "hlsl-out",
    "dot-out",
    "serialize",
    "deserialize",
]
