[package]
authors = ["gfx-rs developers"]
description = "Shader translation command line tool"
edition = "2021"
keywords = ["GLSL", "MSL", "SPIR-V", "shader"]
license = "MIT OR Apache-2.0"
name = "naga-cli"
repository = "https://github.com/gfx-rs/wgpu/tree/trunk/naga-cli"
version = "22.0.0"

[[bin]]
name = "naga"
path = "src/bin/naga.rs"
# This _must_ be false, as this conflicts with `naga`'s docs.
#
# See https://github.com/gfx-rs/wgpu/issues/4997
doc = false
test = false

[dependencies]
anyhow.workspace = true
argh.workspace = true
bincode.workspace = true
codespan-reporting.workspace = true
env_logger.workspace = true

[dependencies.naga]
features = [
    "compact",
    "deserialize",
    "dot-out",
    "glsl-in",
    "glsl-out",
    "hlsl-out",
    "msl-out",
    "serialize",
    "spv-in",
    "spv-out",
    "wgsl-in",
    "wgsl-out",
]
path = "../naga"
version = "22.0.0"
